<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.utfpr.android.samples.MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        android:id="@+id/btOpenTableLayout"
        android:onClick="openTableLayout" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_Layout"
        android:id="@+id/btOpenRelativeLayout"
        android:onClick="openRelativeLayout" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_horizontal"
        android:layout_gravity="center_horizontal"
        android:onClick="openLinearLayoutHorizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_vertical"
        android:layout_gravity="center_horizontal"
        android:onClick="openTableLayoutVertical" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        android:layout_gravity="center_horizontal"
        android:onClick="openFrameLayout" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout"
        android:layout_gravity="center_horizontal"
        android:onClick="openGridLayout" />

</LinearLayout>
